Fixed width of search text to prevent line-wrapping pas the related image.

--- a/modules/Custom/resource/resource_page_templates/resources.css
+++ b/modules/Custom/resource/resource_page_templates/resources.css
@@ -69,6 +69,7 @@ div.resource-output-image{
 div.resource-text{
 	float: left;
 	font-size: 13px;
+	width: 80%;
 }
 
 div.resource-output-title a {
